--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
         <div id="media">
             <img src="assets/images/profilepicture.png"
                 alt="profile picture" style= "width:150px;height:150px;">
-               <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio ut non temporibus! Odio libero quia rem facilis cumque sunt, 
-                    aperiam in quis dolorum quas. Dicta atque numquam ex temporibus eligendi. 
-                   </p>
+            <p>
+                If asked me a few years ago what I wanted to be I would not have been able to give 
+                you a deninite answer. Fortunately, I have been interested in technology and people for as 
+                long as I remember. This lead me to study Information Management at Syracuse University. The experience with Syracuse is never ending.
+                My connections there have allowed me to learn and grow.
+            </p>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio ut non temporibus! Odio libero quia rem facilis cumque sunt, 
-                    aperiam in quis dolorum quas. Dicta atque numquam ex temporibus eligendi. 
+                   I have been lucky to land in Columbia University's Full Stack Development Course.
+                   This experience has been challenging so far, but i hope to take everything that I have learned to be a successful Project Manager or Consultant.
+                
                 </p>   
         </div>
     </div>
